fixed spacing bug

--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,6 @@ img:hover{
 }
 
 .syntaxHighlight p {
-  margin-top: 0px;
-  margin-bottom: 7px;
+  margin-top: 3px;
+  margin-bottom: 3px;
 }
